# CPURayTracer

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: app.h  main.cpp
src/graphics/: hit.h  material.h  ray.h  sampler.h  shader.h  texture.h
src/scene/: light.h  object.h  rectangle.h  skybox.h  sphere.h  triangle.h
src/shaders/: quad.frag  quad.vert
